# yolov11_detection

./: README.md
yolo_detection/: CMakeLists.txt  package.xml
yolo_detection/include/tools/: Config.hpp  ScopedTimer.hpp  YOLO11.hpp
yolo_detection/models/: etiket.txt
yolo_detection/src/: yolov11_detection.cpp
